# Urban-Twin

./: .env.example  .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml  teleop  vercel.json
alembic/: env.py
alembic/versions/: 0001_initial_postgis_schema.py  0002_multisource_layers.py
deploy/: azure-bootstrap.sh  cloud-init.yaml.tftpl  docker-compose.azure.yml  drone-cloud-init.yaml.tftpl  nginx.conf
docs/: DEPLOY.md  DRONE.md  DRONE_TROUBLESHOOTING.md  SUPABASE.md  VERCEL.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  CesiumMap.tsx  api.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
infra/: .gitkeep  README.md  drone_vm.tf  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf  vm.tf
scripts/: down.sh  drone.sh  mavlink-relay.py  px4-sitl.sh  up.sh
tests/: test_api_schemas.py  test_drone_envelope.py  test_drone_events.py  test_drone_transform.py  test_forecast_models.py  test_lightgbm_predict.py  test_normalize.py  test_osm_parse.py  test_reading_event.py
urban_twin/: __init__.py  config.py
urban_twin/api/: atmosphere.py  main.py  predict_service.py  queries.py  schemas.py
urban_twin/db/: __init__.py  models.py  session.py
urban_twin/drone/: __init__.py  bridge.py  envelope.py  main.py  transform.py
urban_twin/forecast/: __init__.py  features.py  gbr.py  history.py  lightgbm_model.py  main.py  models.py  train.py
urban_twin/ingestion/: __init__.py  (+4 more)
(+34 files in other folders)
