[project]
name = "urban-twin"
version = "0.1.0"
description = "Real-time geospatial weather twin for a single neighborhood"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "geoalchemy2>=0.15.2",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.0",
  "shapely>=2.0.6",
  "aiokafka>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[project.scripts]
urban-ingest = "urban_twin.ingestion.main:cli"
urban-api = "urban_twin.api.main:cli"
urban-ws = "urban_twin.websocket_bridge.main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["urban_twin*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
